; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/ncpus/extr_acpi.c_acpi0_present.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/ncpus/extr_acpi.c_acpi0_present.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devinfo_dev = type { i32 }

@DEVINFO_ROOT_DEVICE = common dso_local global i32 0, align 4
@acpi0_check = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @acpi0_present to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi0_present() #0 {
  %1 = alloca %struct.devinfo_dev*, align 8
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  %3 = call i32 (...) @devinfo_init()
  %4 = load i32, i32* @DEVINFO_ROOT_DEVICE, align 4
  %5 = call %struct.devinfo_dev* @devinfo_handle_to_device(i32 %4)
  store %struct.devinfo_dev* %5, %struct.devinfo_dev** %1, align 8
  %6 = load %struct.devinfo_dev*, %struct.devinfo_dev** %1, align 8
  %7 = icmp ne %struct.devinfo_dev* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %0
  %9 = load %struct.devinfo_dev*, %struct.devinfo_dev** %1, align 8
  %10 = load i32, i32* @acpi0_check, align 4
  %11 = call i32 @devinfo_foreach_device_child(%struct.devinfo_dev* %9, i32 %10, i32* null)
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %8, %0
  %13 = call i32 (...) @devinfo_free()
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @devinfo_init(...) #1

declare dso_local %struct.devinfo_dev* @devinfo_handle_to_device(i32) #1

declare dso_local i32 @devinfo_foreach_device_child(%struct.devinfo_dev*, i32, i32*) #1

declare dso_local i32 @devinfo_free(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
